log
Thu 25 Apr 2024 03:21:49 PM UTC: 
 tests:  0|6
total_score: 0/70
482f3d3
Thu 25 Apr 2024 03:28:07 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
3acc79f
Thu 25 Apr 2024 03:30:48 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/70
6252c03
Thu 25 Apr 2024 03:32:06 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|6
total_score: 0/70
b4ff6ab
Thu 25 Apr 2024 03:33:18 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
41f5ccc
Thu 25 Apr 2024 03:34:51 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:28: error: too few arguments to function ‘calloc’
   56 |   mapa->buckets = (Pair**) calloc(capacity * sizeof(Pair*));
      |                            ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:14: note: declared here
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
Compilation failed
1c5bb0e
Thu 25 Apr 2024 03:35:07 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:29: error: too few arguments to function ‘calloc’
   56 |   mapa->buckets = (Pair**) *calloc(capacity * sizeof(Pair*));
      |                             ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:14: note: declared here
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
Compilation failed
213873c
Thu 25 Apr 2024 03:36:44 PM UTC: 
 hashmap.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  1|5
total_score: 10/70
72d5ac2
Thu 25 Apr 2024 03:48:45 PM UTC: 
 hashmap.c | 22 +++++++++++++++++++---
 1 file changed, 19 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:17: error: invalid operands to binary % (have ‘char *’ and ‘long int’)
   45 |   int pos = key % map->capacity;
      |                 ^ ~~~~~~~~~~~~~
      |                      |
      |                      long int
Compilation failed
aa1ab15
Thu 25 Apr 2024 03:49:34 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c308aa7
Thu 25 Apr 2024 03:50:58 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|4
total_score: 20/70
385ffb0
Thu 25 Apr 2024 03:51:36 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 20/70
a95e99c
Thu 25 Apr 2024 03:51:54 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 20/70
ee2b26d
Thu 25 Apr 2024 03:55:14 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|4
total_score: 20/70
5e8657b
Thu 25 Apr 2024 03:56:44 PM UTC: 
 hashmap.c | 21 ++++++++++++++++++---
 1 file changed, 18 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 30/70
acabadd
Thu 25 Apr 2024 03:58:28 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|4
total_score: 30/70
99d0981
Thu 25 Apr 2024 04:01:20 PM UTC: 
 hashmap.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
 tests:  3|4
total_score: 30/70
c46cc45
Thu 25 Apr 2024 04:01:36 PM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
618bd15
Thu 25 Apr 2024 04:02:15 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
768009f
Thu 25 Apr 2024 04:03:38 PM UTC: 
 hashmap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  0|0
b928171
Thu 25 Apr 2024 04:04:35 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
dbf1a56
Thu 25 Apr 2024 04:05:29 PM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
c0da94e
Thu 25 Apr 2024 04:09:26 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
366f282
Thu 25 Apr 2024 04:10:02 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|4
total_score: 30/70
2c85fb1
Thu 25 Apr 2024 04:11:12 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|4
total_score: 30/70
770a901
Thu 25 Apr 2024 04:13:20 PM UTC: 
 hashmap.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
 tests:  9|3
total_score: 40/70
e6ea0f3
Sat 27 Apr 2024 09:28:55 PM UTC: 
 hashmap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 40/70
1ffdd95
Sat 27 Apr 2024 09:30:56 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  10|3
total_score: 40/70
f2b8f73
Sat 27 Apr 2024 09:31:31 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:108:16: error: assignment to ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Werror=int-conversion]
  108 |   map->current = map->buckets[pos];
      |                ^
cc1: all warnings being treated as errors
Compilation failed
cd39953
